--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.6"
   },
   "dependencies": {
+    "@aws-cdk/aws-codebuild": "^1.60.0",
     "@aws-cdk/core": "1.60.0",
     "source-map-support": "^0.5.16"
   }
